--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-20  Benedikt Meurer <benny@xfce.org>
+
+	* === Released 0.2.12 ===
+	* *.po: Update Project-Id-Version.
+
 2007-01-20  Alexander Nyakhaychyk  <nyakhaychyk@gmail.com>
 
 	* be.po: Updated Belarusian Translation
@@ -45,7 +50,7 @@
 
 2006-11-26  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
-        * ca.po: Catalan Update by Carles Muñoz Gorriz <carlesmu@ya.com>
+	* ca.po: Catalan Update by Carles Muñoz Gorriz <carlesmu@ya.com>
 
 2006-11-14  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
