--- a/po/pa.po
+++ b/po/pa.po
@@ -5,7 +5,7 @@
 # A S Alam <apbrar@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: pa\n"
+"Project-Id-Version: mousepad 0.2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-04 17:08+0100\n"
 "PO-Revision-Date: 2006-12-29 00:10+0530\n"
