* fr.po: Minor changes to the French translations   in xfce-utils, libxfce4util and mousepad * pl.po: Updated the Polish translation by Szymon Kałasz <szymon_maestro@gazeta.pl>   in thunar and mousepad. * ro.po: Updated the Romanian translation by Mişu Moldovan <dumol@gnome.ro>   in most core packages.
(Old svn revision: 24685)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-21  Maximilian Schleiss <maxschleiss@bluewin.ch>
+
+	* fr.po: Updated the French translation.
+	* pl.po: Updated the Polish translation by
+	Szymon Kałasz <szymon_maestro@gazeta.pl>.
+
 2007-01-20  Benedikt Meurer <benny@xfce.org>
 
 	* === Released 0.2.12 ===
