--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-08  Mohamed Magdy <mohamed.m.k@gmail.com>
+
+	* ar.po: Added Arabic translation.
+	*LINGUAS: Added ar language code.
+	
 2007-02-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
