* TODO: Remind myself to fix problems with UTF-8 filenames. 	* mousepad/mousepad-window.c: Fix crash when opening files 	  with the command line. 	* Mousepad.desktop.in.in, Mousepad.desktop.in.in: Mousepad executable 	  is now lowercase again. 	* mousepad/mousepad-screen.c: Remove unused signals from the Class.
(Old svn revision: 25040)

--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@
 
 - Saving and loading
   - Save All option.
+  - Filenames and UTF-8.
   - Reload option. Maybe also stat the source file when switching
     tabs and tell the user if the source was modified.
 
