--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-02-17	Nick Schermer <nick@xfce.org>
 
+	* TODO: Remind myself to fix problems with UTF-8 filenames.
+	* mousepad/mousepad-window.c: Fix crash when opening files
+	  with the command line.
+	* Mousepad.desktop.in.in, Mousepad.desktop.in.in: Mousepad executable
+	  is now lowercase again.
+	* mousepad/mousepad-screen.c: Remove unused signals from the Class.
+
+2007-02-17	Nick Schermer <nick@xfce.org>
+
 	* TODO, NEWS: Update the current status of the rewrite.
 	* Mousepad.desktop.in.in: Add MimeType and improve Categories.
 
