--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2007-02-19	Nick Schermer <nick@xfce.org>
+2007-03-03	Nick Schermer <nick@xfce.org>
+
+	* configure.in.in, mousepad/Makefile.am: Remove the PCRE dependency.
+	  I should have removed this earier after some testing.
+
+2007-03-03	Nick Schermer <nick@xfce.org>
 
 	* mousepad/mousepad-dialogs.{c,h}: New file for the dialogs
 	  so the mousepad-window file becomes more readable.
