--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2007-03-25  Daichi Kawahata <daichi@xfce.org>
+
+	* mk.po: Removed executable attribute.
+
 2007-03-18  Eren Turkay <erenturkay@xfce.org>
- 
-    * tr.po: Updated the Turkish translation.
+
+	* tr.po: Updated the Turkish translation.
 
 2007-03-03 Maxim Dziumanenko <dziumanenko@gmail.com>
 
@@ -8,7 +12,7 @@
 
 2007-02-22  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update
+	* eu.po: Basque translation update
 
 2007-02-20  Maximilian Schleiss <maxschleiss@bluewin.ch>
 
@@ -23,8 +27,8 @@
 2007-02-08  Mohamed Magdy <mohamed.m.k@gmail.com>
 
 	* ar.po: Added Arabic translation.
-	*LINGUAS: Added ar language code.
-	
+	* LINGUAS: Added ar language code.
+
 2007-02-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
