--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2007-03-25  Daichi Kawahata <daichi@xfce.org>
 
+	* gl.po, tr.po: Fixed header.
 	* mk.po: Removed executable attribute.
 
 2007-03-18  Eren Turkay <erenturkay@xfce.org>
