* TODO: Add some stuff.
(Old svn revision: 25621)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2007-04-20	Nick Schermer <nick@xfce.org>
+	* TODO: Add some stuff.
+
+
+2007-04-20	Nick Schermer <nick@xfce.org>
 	* TODO, NEWS: Update and expand both documents.
 
 
