* TODO: Fix some typos and add some new ideas and reminders.
(Old svn revision: 25622)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-21	Nick Schermer <nick@xfce.org>
+	* TODO: Fix some typos and add some new ideas and reminders.
+
+
 2007-04-20	Nick Schermer <nick@xfce.org>
 	* TODO: Add some stuff.
 
