--- a/TODO
+++ b/TODO
@@ -1,8 +1,16 @@
+All the items below, except those under the feature heading, must
+be fixed (or ignored when irrelevant) before the nick_0_3 branch
+can move to trunk. When the branch enters trunk, it's important
+we work towards a stable version, so we can release a 0.2.90.1
+(0.3 beta 1) version as soon as possible (if needed, independent
+from the Xfce schedule).
+
+
 Interface
 =========
 - Dialog when closing multiple (modified) tabs. Maybe not needed
   since we ask the use what to do when a modified file is closed.
-- Tab font color when the file is modified or readonly.
+- Tab font color when the file is modified or read only.
 - Test the application with a screen reader and add Atk objects
   where needed.
 - Support for tab DND between windows.
@@ -15,10 +23,11 @@ Interface
   because they are 'registered' by the textview/ui.
 - Maybe add a document icon to the recent menu. In a perfect
   situation we shoud detect the mime from the file and not by using
-  the mime info from GtkRecentInfo, but this is proabably too much
+  the mime info from GtkRecentInfo, but this is probably too much
   work for Mousepad.
-- Set the mime type when saving the resent file, not for us, both for
+- Set the mime type when saving the recent file, not for us, but for
   applications that might use the entire recent history.
+- When hitting the enter button in the jump dialog, we should jump.
 - Remove the frame borders from the statusbar (we can entirely drop
   the frames) and add a resize grip. This way it will look like a
   real Gtk statusbar.
@@ -26,7 +35,8 @@ Interface
 
 Code
 ====
-- Check for code dupplication and make sure the comments are worth
+- Cleanup mousepad-document.h. The order of the functions is a mess.
+- Check for code duplication and make sure the comments are worth
   reading.
 
 
@@ -34,14 +44,15 @@ Text View
 =========
 - Replace dialog. This dialog should also provide a find button so
   there is an alternative for the type-ahead feature.
+- Maybe a match whole word option.
 
 
 Saving and loading
 ==================
 - Save All option.
-- Support for encoding. Only UTF-8 is supported atm for testing.
+- Support for encoding. Only UTF-8 is supported for testing.
 - The filenames used in the title and tooltips are not UTF-8 safe.
-  We also have to make sure _ characters inside a filename do not
+  We also have to make sure _ characters in a filename do not
   result in mnemonic labels.
 - Check if the file is externally modified when switching tabs.
 
@@ -49,9 +60,8 @@ Saving and loading
 Other
 =====
 - Implement Gtk print support.
-- Maybe a plugin based system for syntax highlighting and GtkSpell.
-  We cannot use GtkSourceView with this implementation, because it
-  cannot attach to an existing textview (GtkSpell can).
+- We need a cool Mousepad logo.
+- Write documentation.
 
 
 Testing and polishing
@@ -62,3 +72,12 @@ Testing and polishing
 - Profiling loading large files (Gtk/Pango has a problem here). This
   also locks some dialogs.
 - Checking for memory leaks.
+- Make sure objects are unrefed when their parent is destroyed, Gtk+
+  does not always take care of this.
+
+
+Feature
+=======
+- Maybe a plugin based system for syntax highlighting and GtkSpell.
+  We cannot use GtkSourceView with this implementation, because it
+  cannot attach to an existing textview (GtkSpell can).
